--- a/style.css
+++ b/style.css
@@ -229,6 +229,12 @@ li a:hover{
 }
 @media (max-width:920px)
 {
+body{
+    background-color: rgb(247, 203, 211);
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    height: 100vh;
+}
 .head{
     padding: 10px;
     display: block;
